# TestAnyware

./: .gitignore  CONTEXT.md  LICENSE  LLM_INSTRUCTIONS.md  README.md
.grove/: 01-DONE-plan-k1.md  01-plan-k1.md  010-agent-action-parity.md  010-protocol-doc-streaming-transfer.md  02-DONE-author-skill-k2.md  02-DONE-implement-default-resolution-k2.md  02-DONE-spike-hidpi-feasibility-k2.md  02-spike-display-modes-k2.md  020-port-doctor.md  03-DONE-build-resolution-switch-k3.md  03-build-resolution-switch-k3.md  03-macos-guest-resolution-k3.md  03-target-shape-and-vision-disposition-k3.md  030-prototype-macos-snapshot-parity.md  030-screen-find-text.md  030-show-menu.md  04-DONE-confirm-hidpi-pt-path-on-retina-host-k4.md  040-decide-and-record.md  05-build-scale-aware-rfb-connection-k5.md  050-live-vm-gate.md  06-DONE-build-hidpi-optin-and-wiring-k6.md  060-egui-viewer.md  060-swift-cli-streaming.md  07-DONE-verify-vision-on-downsampled-2x-k7.md  070-e2e-verification-and-golden-rebuild.md  070-next-wave.md  080-crosscompile-spike.md  090-viewer-live-verify.md  100-screen-record-encoder-macos.md  105-tart-restart-stale-vnc.md  110-vm-create-golden-macos.md  120-macos-distribution.md  130-macos-parity-and-delete-cli.md  140-tier2-plan.md  150-parallels-backend-research.md  (+8 more)
agents/linux/: README.md  pyproject.toml
agents/linux/testanyware_agent/: __main__.py  accessibility.py  models.py  query_resolver.py  role_mapper.py  server.py  system_endpoints.py  tree_walker.py
agents/linux/tests/: test_error_tokens.py  test_file_transfer.py
cli/: README.md  (+2 more)
cli-rs/: Cargo.toml  README.md
cli-rs/crates/testanyware-agent-client/: Cargo.toml
cli-rs/crates/testanyware-agent-client/src/: lib.rs
cli-rs/crates/testanyware-agent-client/tests/: endpoint_integration.rs
cli-rs/crates/testanyware-cli/: Cargo.toml
cli-rs/crates/testanyware-cli/src/: discoverability.rs  lib.rs  llm_instructions.md  main.rs  output.rs  resolve.rs  surface.rs
cli-rs/crates/testanyware-cli/src/commands/: agent.rs  doctor.rs  file.rs  input.rs  menu_bar.rs  mod.rs  record.rs  screen.rs  viewer.rs  vm.rs  window.rs
cli-rs/crates/testanyware-cli/tests/: cli-contract.rs  linux-host-harness.rs  live-vm-gate.rs  windows-host-harness.rs
cli-rs/crates/testanyware-ocr-client/: Cargo.toml
cli-rs/crates/testanyware-ocr-client/src/: bridge.rs  detection.rs  engine.rs  find.rs  lib.rs  status.rs  vision.rs  windows_ocr.rs
cli-rs/crates/testanyware-ocr-client/tests/: bridge_integration.rs  fake-ocr-daemon.sh
cli-rs/crates/testanyware-protocol/: Cargo.toml
cli-rs/crates/testanyware-protocol/src/: agent_formatter.rs  agent_requests.rs  agent_responses.rs  element_info.rs  lib.rs  role_mapper.rs  unified_role.rs  window_info.rs
cli-rs/crates/testanyware-protocol/tests/: fixtures.rs
cli-rs/crates/testanyware-rfb/: Cargo.toml
cli-rs/crates/testanyware-rfb/src/: auth.rs  connection.rs  error.rs  framebuffer.rs  input.rs  keymap.rs  lib.rs  proto.rs  tight.rs  zrle.rs
cli-rs/crates/testanyware-rfb/tests/: handshake_fixture.rs  input_fixture.rs
cli-rs/crates/testanyware-video/: Cargo.toml
cli-rs/crates/testanyware-video/src/: avfoundation.rs  encoder.rs  ffmpeg.rs  lib.rs
cli-rs/crates/testanyware-video/tests/: avfoundation_smoke.rs  ffmpeg_smoke.rs
cli-rs/crates/testanyware-vm/: Cargo.toml
cli-rs/crates/testanyware-vm/src/: capture.rs  detached.rs  display.rs  display_request.rs  error.rs  finalize.rs  golden.rs  golden_linux.rs  golden_windows.rs  health.rs  id.rs  lib.rs  lifecycle.rs  meta.rs  monitor.rs  paths.rs  preflight.rs  process.rs  qemu.rs  qemu_profile.rs  recovery.rs  spec.rs  ssh.rs  tart.rs
cli-rs/crates/testanyware-vm/tests/: recovery-live.rs
cli-rs/tests/fixtures/protocol/: action-response-success.json  element-info-full.json  element-info-minimal.json  element-info-with-children.json  error-response-with-details.json  inspect-response-full.json  inspect-response-minimal.json  snapshot-response-typical.json  window-info-with-elements.json  window-info-with-title.json  window-info-without-title.json
vision/: README.md  pyproject.toml
vision/common/: pyproject.toml
vision/common/src/testanyware_common/: __init__.py  ab_test.py  image_io.py  metrics.py  nms.py  types.py
vision/common/tests/: test_ab_test.py  test_detection_types.py  test_image_io.py  test_metrics.py  test_nms.py  test_types.py
vision/docs/superpowers/plans/: 2026-04-03-master-plan-and-window-detection.md  2026-04-03-revised-window-detection.md
vision/stages/drawing-primitives/: pyproject.toml
vision/stages/drawing-primitives/src/drawing_primitives/: __init__.py  border.py  color.py  font.py  shadow.py  stage.py
vision/stages/drawing-primitives/tests/: test_stage.py
vision/stages/icon-classification/: README.md  pyproject.toml
vision/stages/icon-classification/src/icon_classification/: __init__.py  classifier.py  shape_analysis.py  stage.py  vocabulary.py
vision/stages/icon-classification/tests/: test_stage.py
vision/stages/icon-classification/training/: README.md  collect-training-data.sh
vision/stages/text-ocr/: README.md  pyproject.toml
vision/stages/text-ocr/src/ocr_analyzer/: __init__.py  __main__.py  daemon.py
vision/stages/text-ocr/tests/: test_daemon.py
vision/stages/window-detection/analysis/: pyproject.toml
vision/stages/window-detection/analysis/src/window_analysis/: __init__.py  heuristic.py  yolo_detector.py
vision/stages/window-detection/analysis/tests/: test_heuristic.py  test_yolo_detector.py
vision/stages/window-detection/generator/: pyproject.toml
vision/stages/window-detection/generator/src/window_gen/: scenario_library.py  scenarios.py  vm_capture.py
vision/stages/window-detection/generator/tests/: test_scenario_library.py  test_scenarios.py  test_vm_capture.py
vision/stages/window-detection/training/: pyproject.toml
vision/stages/window-detection/training/configs/: yolov8s-window.yaml
vision/stages/window-detection/training/src/window_train/: train.py  yolo_format.py
vision/stages/window-detection/training/tests/: test_train.py  test_yolo_format.py
(+369 files in other folders)
