[workspace]
resolver = "2"
members = [
    "crates/testanyware-protocol",
    "crates/testanyware-agent-client",
    "crates/testanyware-ocr-client",
    "crates/testanyware-video",
    "crates/testanyware-rfb",
    "crates/testanyware-vm",
    "crates/testanyware-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
repository = "https://github.com/Linkuistics/TestAnyware"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "net", "time", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
percent-encoding = "2.3"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
base64 = "0.22"
wiremock = "0.6"
tempfile = "3.13"
nix = { version = "0.29", features = ["signal", "process"] }
getrandom = "0.2"
flate2 = "1.0"
jpeg-decoder = "0.3"

# Workspace-wide release profile
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# cargo-dist metadata. The full release pipeline is wired up in the
# "Distribute Rust testanyware" task; this stub establishes the metadata
# block and target list so later configuration is additive, not new.
[workspace.metadata.dist]
cargo-dist-version = "0.22.1"
ci = "github"
installers = ["shell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
]
pr-run-mode = "plan"
