[project]
name = "testanyware-common"
version = "0.1.0"
description = "Shared types, metrics, and utilities for TestAnyware"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testanyware_common"]
