[package]
name = "testanyware-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "TestAnyware host CLI (Rust port; in progress)."

[[bin]]
name = "testanyware"
path = "src/main.rs"

[dependencies]
testanyware-protocol = { path = "../testanyware-protocol" }
testanyware-agent-client = { path = "../testanyware-agent-client" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
