[package]
name = "testanyware-rfb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust RFB (VNC) protocol client for TestAnyware"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
des = "0.8"
cipher = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
