[project]
name = "window-analysis"
version = "0.1.0"
description = "Window detection analysis library (heuristic + ML)"
requires-python = ">=3.11"
dependencies = [
    "testanyware-common",
    "numpy>=1.26",
    "opencv-python-headless>=4.8",
    "pillow>=10.0",
]

[project.optional-dependencies]
ml = [
    "ultralytics>=8.0",
    "torch>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/window_analysis"]
