[project]
name = "window-gen"
version = "0.1.0"
description = "Training data generator for window detection stage"
requires-python = ">=3.11"
dependencies = [
    "testanyware-common",
    "pillow>=10.0",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/window_gen"]
